fix(MSHOP-100): Added user fetching
